--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@ body {
   font-family: "Inter", sans-serif;
 }
 
+.country-default {
+  fill: rgba(0, 0, 0, 0.2);
+  stroke: white;
+}
+
 .container {
   width: var(--container-width);
   max-width: var(--container-max-width);
